--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/slider": "^3.0.3",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-device": "~2.4.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
