--- a/app.json
+++ b/app.json
@@ -14,7 +14,8 @@
       "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": [
-      "**/*"
+      "**/*",
+      "input/*"
     ],
     "ios": {
       "supportsTablet": true
