--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-numeric-input": "^1.8.3",
+    "react-native-reanimated": "~1.13.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
