--- a/package.json
+++ b/package.json
@@ -8,33 +8,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/slider": "4.1.12",
+    "@react-native-community/slider": "4.2.4",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "axios": "^0.21.1",
-    "expo": "^44.0.0",
-    "expo-app-loading": "~1.3.0",
-    "expo-constants": "~13.0.0",
-    "expo-device": "~4.1.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "expo": "^47.0.8",
+    "expo-app-loading": "~2.1.1",
+    "expo-constants": "~14.0.2",
+    "expo-device": "~5.0.0",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-elements": "^3.2.0",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-dom": "~17.0.9",
-    "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.19.3",
+    "@types/react": "~18.0.24",
+    "@types/react-dom": "~18.0.8",
+    "@types/react-native": "~0.70.6",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
