--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/slider": "4.2.4",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "axios": "^0.21.1",
@@ -19,12 +20,14 @@
     "expo-app-loading": "~2.1.1",
     "expo-constants": "~14.0.2",
     "expo-device": "~5.0.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
