--- a/eas.json
+++ b/eas.json
@@ -1,7 +1,7 @@
 {
   "cli": {
     "version": ">= 3.0.0",
-    "requireCommit": false
+    "requireCommit": "false"
   },
   "build": {
     "development": {
