--- a/tekton/tekton-task-publish-expo-remote-control.yml
+++ b/tekton/tekton-task-publish-expo-remote-control.yml
@@ -41,8 +41,8 @@ spec:
 
         echo "Publishing app"
         node_modules/.bin/./expo login -u $(inputs.params.username) -p $(inputs.params.password)
-        node_modules/.bin/./eas update --platform android --auto --message "Build with tekton"
-        node_modules/.bin/./eas build --platform android --no-wait
+        EAS_NO_VCS=1 node_modules/.bin/./eas update --platform android --auto --message "Build with tekton"
+        EAS_NO_VCS=1 node_modules/.bin/./eas build --platform android --no-wait
 
         echo "Clear repo folder"
         rm -rf $repoFolder/*
