--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^5.11.15",
     "@react-navigation/native": "^5.9.2",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^0.21.1",
-    "expo": "^45.0.0",
+    "expo": "^47.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-constants": "~13.1.1",
     "expo-device": "~4.2.0",
@@ -27,20 +29,20 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
+    "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.11.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-dom": "~17.0.9",
-    "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.19.3",
+    "@types/react": "~18.0.24",
+    "@types/react-dom": "~18.0.8",
+    "@types/react-native": "~0.70.6",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
