--- a/package.json
+++ b/package.json
@@ -9,33 +9,33 @@
   },
   "dependencies": {
     "@expo/dev-server": "0.1.120",
-    "@expo/webpack-config": "~0.16.2",
+    "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/slider": "4.2.1",
-    "@react-native-masked-view/masked-view": "0.2.6",
-    "@react-native-picker/picker": "2.4.0",
+    "@react-native-community/slider": "4.2.4",
+    "@react-native-masked-view/masked-view": "0.2.8",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^5.11.15",
     "@react-navigation/native": "^5.9.2",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^0.21.1",
     "expo": "^47.0.0",
-    "expo-app-loading": "~2.0.0",
-    "expo-constants": "~13.1.1",
-    "expo-device": "~4.2.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "~2.2.1",
+    "expo-app-loading": "~2.1.1",
+    "expo-constants": "~14.0.2",
+    "expo-device": "~5.0.0",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-reanimated": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "~3.11.1",
+    "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
