--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea
+dist/**/*
 node_modules/**/*
 .expo/*
 npm-debug.*
@@ -9,6 +10,7 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
+
 
 # macOS
 .DS_Store
