--- a/app.json
+++ b/app.json
@@ -40,6 +40,9 @@
       "eas": {
         "projectId": "4722ac6f-145a-4ef5-bde7-477c3127bb57"
       }
+    },
+    "runtimeVersion": {
+      "policy": "sdkVersion"
     }
   }
 }
